--- a/piano/Piano/Piano.csproj
+++ b/piano/Piano/Piano.csproj
@@ -133,9 +133,9 @@
       <Project>{f60d8b7b-2d2e-4b94-a736-3783ffe1a25c}</Project>
       <Name>Midi</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sharparam.SharpBlade\Sharparam.SharpBlade\Sharparam.SharpBlade.csproj">
+    <ProjectReference Include="..\Sharparam.SharpBlade\SharpBlade\SharpBlade.csproj">
       <Project>{2c390908-d634-4450-9804-71d4929dd392}</Project>
-      <Name>Sharparam.SharpBlade</Name>
+      <Name>SharpBlade</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
